--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
     "firebase": "^9.6.3",
+    "firebase-functions": "^3.16.0",
     "fs": "0.0.1-security",
     "genshin-db": "^3.13.1",
     "gray-matter": "^4.0.3",
